# international-doom

./: CMakeLists.txt  README.md  THANKS.md  vcpkg.json
.github/workflows/: codeql.yml  main.yml
cmake/: FindSDL3.cmake  FindSDL3_mixer.cmake  FindSDL3_net.cmake  FindSampleRate.cmake  config.h.cin
cmake/triplets/: x64-windows-static-release.cmake
data/: README  doom.desktop  heretic.desktop  hexen.desktop
lib/ebur128/: CMakeLists.txt  ebur128.c
lib/miniz/: miniz.c
lib/netlib/: CMakeLists.txt  netlib.c  netlib.h
lib/opl/: CMakeLists.txt  opl3.c  opl3.h  opl_sdl.c
lib/pcsound/: CMakeLists.txt  pcsound.c  pcsound_sdl.c
lib/spng/: CMakeLists.txt  spng.c
lib/stb_image_write/: CMakeLists.txt
lib/textscreen/: CMakeLists.txt  txt_gui.c  txt_sdl.c  txt_sdl.h  txt_widget.c  txt_window.c
lib/win32/fluidsynth-2.4.2-winXP-x86/lib/: fluidsynth.lib
lib/win32/fluidsynth-2.4.2-winXP-x86/lib/cmake/fluidsynth/: FluidSynthConfig.cmake  FluidSynthConfigVersion.cmake  FluidSynthTargets-release.cmake  FluidSynthTargets.cmake
lib/win32/fluidsynth-2.4.2-winXP-x86/lib/pkgconfig/: fluidsynth.pc
lib/win32/libsamplerate-0.2.2-win32/lib/cmake/SampleRate/: SampleRateConfigVersion.cmake  SampleRateTargets-release.cmake  SampleRateTargets.cmake
opl/: CMakeLists.txt  opl.c  opl_linux.c  opl_obsd.c  opl_sdl.c  opl_win32.c
pcsound/: CMakeLists.txt  pcsound.c  pcsound.h  pcsound_bsd.c  pcsound_internal.h  pcsound_linux.c  pcsound_sdl.c
src/: CMakeLists.txt  aes_prng.c  aes_prng.h  d_dedicated.c  d_event.c  d_event.h  d_iwad.c  d_iwad.h  d_launcher.c  d_launcher.h  d_loop.c  d_loop.h  d_mode.c  d_mode.h  d_ticcmd.h  deh_defs.h  deh_io.c  deh_io.h  deh_main.c  deh_main.h  deh_mapping.c  deh_mapping.h  deh_str.c  deh_str.h  deh_text.c  doom-res.rc.in  doomkeys.h  doomtype.h  gusconf.c  gusconf.h  heretic-res.rc.in  hexen-res.rc.in  i_endoom.c  i_endoom.h  i_flmusic.c  i_glob.c  i_input.c  i_input.h  i_joystick.c  i_joystick.h  (+110 more)
src/doom/: CMakeLists.txt  am_map.c  am_map.h  am_oids.c  am_oids.h  ct_chat.c  ct_chat.h  d_englsh.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_player.h  d_think.h  deh_ammo.c  deh_bexincl.c  deh_bexptr.c  deh_bexstr.c  deh_cheat.c  deh_doom.c  deh_frame.c  deh_misc.c  deh_misc.h  deh_ptr.c  deh_sound.c  deh_thing.c  deh_weapon.c  doomdef.c  doomdef.h  doomstat.c  doomstat.h  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  (+63 more)
src/heretic/: CMakeLists.txt  am_data.h  am_map.c  am_map.h  crlfunc.c  crlfunc.h  ct_chat.c  ct_chat.h  d_main.c  d_net.c  deh_ammo.c  deh_frame.c  deh_htext.c  deh_htic.c  deh_htic.h  deh_sound.c  deh_thing.c  deh_weapon.c  doomdata.h  doomdef.h  dstrings.h  f_finale.c  f_wipe.c  f_wipe.h  g_game.c  g_rewind.c  icon.c  id_func.c  id_func.h  in_lude.c  info.c  info.h  m_random.c  m_random.h  mn_menu.c  p_action.h  p_ceilng.c  p_doors.c  p_enemy.c  p_floor.c  (+38 more)
src/hexen/: CMakeLists.txt  a_action.c  am_data.h  am_map.c  am_map.h  ct_chat.c  ct_chat.h  d_net.c  f_finale.c  f_wipe.c  f_wipe.h  g_game.c  g_rewind.c  h2_main.c  h2def.h  icon.c  id_func.c  id_func.h  in_lude.c  info.c  info.h  m_random.c  m_random.h  mn_menu.c  p_acs.c  p_action.h  p_anim.c  p_ceilng.c  p_doors.c  p_enemy.c  p_floor.c  p_inter.c  p_lights.c  p_local.h  p_map.c  p_maputl.c  p_mobj.c  p_plats.c  p_pspr.c  p_setup.c  (+36 more)
src/setup/: CMakeLists.txt  execute.c  mainmenu.c  mode.c  mode.h  multiplayer.c  setup-manifest.xml.in  setup_icon.c
src/strife/: CMakeLists.txt  am_map.c  am_map.h  d_englsh.h  d_main.c  d_net.c  d_player.h  doomstat.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  icon.c  id_func.h  m_menu.c  m_menu.h  p_dialog.c  p_inter.c  p_local.h  p_pspr.c  p_setup.c  p_spec.c  p_tick.c  p_user.c  r_bmaps.c  r_bsp.c  r_bsp.h  r_data.c  r_data.h  r_defs.h  r_draw.c  r_draw.h  r_main.c  r_main.h  r_plane.c  r_plane.h  r_segs.c  r_state.h  r_things.c  (+5 more)
src_dos/: DMX.C  DMX.H  am_map.c  am_map.h  d_englsh.h  d_event.h  d_french.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_think.h  d_ticcmd.h  doomdata.h  doomdef.h  doomstat.h  doomtype.h  dstrings.h  dutils.c  dutils.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  i_cyber.c  i_ibm.c  i_main.c  i_sound.c  i_sound.h  i_system.h  i_video.h  info.c  info.h  (+70 more)
tests/: test_invariant_miniz.c
textscreen/: txt_desktop.c  txt_dropdown.c  txt_fileselect.c  txt_main.h  txt_sdl.c  txt_sdl.h  txt_window.c
win32/: win_opendir.c  win_opendir.h
win32/libsamplerate-0.2.2-win32/lib/: samplerate.lib
