add_library(netlib STATIC netlib.c netlib.h)
target_include_directories(netlib INTERFACE ".")

if(WIN32)
    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
        target_link_libraries(netlib PUBLIC ws2_32 iphlpapi)
    elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
        target_link_libraries(netlib PUBLIC wsock32 iphlpapi)
    endif()
endif()